--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rocklabs/omnic-js",
+  "name": "@rocklabs-io/omnic-js",
   "version": "1.0.0",
   "description": "Javascript SDK for Omnic",
   "main": "dst/index.js",
