--- a/package.json
+++ b/package.json
@@ -43,5 +43,7 @@
     "url": "https://github.com/rocklabs-io/omnic-js/issues"
   },
   "homepage": "https://github.com/rocklabs-io/omnic-js#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@dfinity/agent": "^0.15.1"
+  }
 }
