--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rocklabs-io/omnic-js",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Javascript SDK for Omnic",
   "main": "dist/index.js",
   "scripts": {
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/rocklabs-io/omnic-js#readme",
   "dependencies": {
-    "@dfinity/agent": "^0.15.1"
+    "@dfinity/agent": "^0.15.1",
+    "@dfinity/principal": "^0.15.3"
   }
 }
